# os2

./: .gitignore  Makefile  README.md
kernel/: Cargo.toml  Makefile  Xargo.toml  bare_bones.rs  cap.rs  continuation.rs  debug.rs  lib.rs  machine.rs  mbr.S  start.S  time.rs  x86_64-unknown-elf.json
kernel/cap/: mod.rs
kernel/continuation/: mod.rs
kernel/interrupts/: idt.rs  mod.rs  pic.rs  pit.rs  tss.rs
kernel/io/: kbd.rs  mod.rs
kernel/memory/: heap.rs  mod.rs
kernel/memory/paging/: e820.rs  mod.rs
kernel/process/: mod.rs  sched.rs  user.rs
kernel/sched/: mod.rs  user.rs
kernel/src/: bare_bones.rs  cap.rs  continuation.rs  debug.rs  main.rs  time.rs
kernel/src/interrupts/: mod.rs  pic.rs  pit.rs
kernel/src/io/: kbd.rs
kernel/src/memory/: heap.rs  mod.rs  paging.rs
kernel/src/memory/paging/: e820.rs  mod.rs
kernel/src/sched/: mod.rs  user.rs
librs/: Cargo.toml
librs/src/: bare_bones.rs  lib.rs
user/: Cargo.toml  Makefile  crt0.S
user/src/: main.rs
