[package]
name = "kernel"
version = "0.1.0"
authors = ["mark-i-m"]
edition = "2018"

[dependencies]
rlibc = "1.0.0"
spin = "0.5"
smallheap = { git = "https://github.com/mark-i-m/smallheap", features = ["no_std"] }
buddy = { git = "https://github.com/mark-i-m/buddy" }
#x86_64 = "0.8.2"
x86_64 = { git = "https://github.com/mark-i-m/x86_64", branch = "fix-flags" }
os_bootinfo = "0.2.1"
rand = { version = "0.6", default-features = false, features = ["alloc"] }
bootloader = { version = "0.8.3", features = ["recursive_page_table"]}

[package.metadata.bootimage]
default-target = "x86_64-unknown-elf.json"
#run-command = ["qemu-system-x86_64", "-m", "1G", "--serial", "mon:stdio", "-drive", "format=raw,file={}", "-s"]
#run-command = ["qemu-system-x86_64", "-m", "1G", "--serial", "mon:stdio", "-drive", "format=raw,file={}", "-s", "-S"]
#run-command = ["qemu-system-x86_64", "-m", "1G", "--serial", "mon:stdio", "-drive", "format=raw,file={}", "-s", "-S", "-d", "int"]
run-command = ["qemu-system-x86_64", "-m", "1G", "--serial", "mon:stdio", "-drive", "format=raw,file={}", "-s", "-d", "int", "-nographic"]
